--- a/pages/main.html
+++ b/pages/main.html
@@ -12,24 +12,14 @@
          <br> And design.
         </p>
 
-        <p class='main'> Название компании - святой грааль в мнемоническом скрипте,
-            заложенным в голову посетителя.
+        <p class='main'> Название сайта? Дизайн?
         </p>
 
         <ol class='list'>
-            <li> О чём сайт? </li>
-            <li> Нарисовать эскиз </li>
-            <li> Грише - HTML и Bootstrap (сетка) </li>
-            <li> Мне - Jessy, CSS и sensay-sun</li>
-            <li> Хостинг </li>
-            <li> Детали, апгрэйд </li>
-            <li> Фриланс </li>
-            <li> Мальдивы </li>
-
+            <li> Гриша, тебе <a href="https://ru.wikipedia.org/wiki/Twitter_Bootstrap">Bootstrap</a>, или какой-то аналог (чтобы динамическая сетка (дизайн) была)
+                и <a href="https://ru.wikipedia.org/wiki/HTML"> HTML </a>.<br> Ещё изучи код HTML и CSS этого сайта (сделай себе форк в гитхабе).</li>
+            <li> Мне - Jessy и CSS</li>
         </ol>
 
 </body>
 </html>
-
-
-<p class='.row'> 
